--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+  height: 100vh;
+  background: linear-gradient(
+    to bottom,
+    rgb(92, 95, 97) 0%,
+    rgb(12, 58, 92) 100%
+  );
+}
+
 .App {
   text-align: center;
   flex-flow: column;
@@ -8,6 +17,7 @@
 .Search-input {
   width: 500px;
   margin: 15px;
+  height: 30px;
 }
 
 .Charts {
