--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: solid black 1px;
   width: 100px;
+  font-weight: 700;
 }
 
 .Chart img {
@@ -49,5 +49,8 @@ body {
   margin-right: 20px;
 }
 
-.Container {
+.Title {
+  font-size: 1.6rem;
+  font-weight: 700;
+  -webkit-text-stroke: rgb(0, 0, 0) 1px;
 }
