--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   min-height: 100vh;
+  max-height: 100%;
 
   background: linear-gradient(
     to bottom,
@@ -14,6 +15,8 @@ body {
 }
 
 .Search-input {
+  min-width: 150px;
+  max-width: 500px;
   width: 500px;
   margin: 15px;
   height: 30px;
@@ -24,7 +27,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin: 0;
 }
 
 .Chart {
@@ -33,6 +35,10 @@ body {
   width: 250px;
   margin: 20px;
   background-color: rgba(240, 248, 255, 0.05);
+}
+
+.Chart:hover {
+  border: solid 2px rgb(0, 0, 0);
 }
 
 .Chart-info {
